WIP: Implement TableMemoryManager
Co-authored-by: Christian Gesse <christian.gesse@hhu.de>

--- a/cmake/kernel/memory/CMakeLists.txt
+++ b/cmake/kernel/memory/CMakeLists.txt
@@ -26,4 +26,5 @@ target_sources(kernel PUBLIC
         ${HHUOS_SRC_DIR}/kernel/memory/manager/HeapMemoryManager.cpp
         ${HHUOS_SRC_DIR}/kernel/memory/manager/IOMemoryManager.cpp
         ${HHUOS_SRC_DIR}/kernel/memory/manager/PageFrameAllocator.cpp
-        ${HHUOS_SRC_DIR}/kernel/memory/manager/PagingAreaManager.cpp)
+        ${HHUOS_SRC_DIR}/kernel/memory/manager/PagingAreaManager.cpp
+        ${HHUOS_SRC_DIR}/kernel/memory/manager/TableMemoryManager.cpp)
